modified colors of fonts

--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ button:focus {
   width: 100%;
   padding: 10px 10px;
   position: relative;
+  box-shadow: 0px 0px 12px rgba(0,0,0,0.4);
 }
 
 .card-close {
@@ -48,11 +49,13 @@ button:focus {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 1.4em;
-  color: #404040;
+  color: #606060;
 }
 
 .card-desc {
   padding-bottom: 2.5vh;
+  font-family: 'Poppins', sans-serif;
+  color: #202020;
 }
 
 .card-footer {}
