--- a/css/main.css
+++ b/css/main.css
@@ -164,6 +164,7 @@ button:focus {
   width: 100%;
   padding: 50px 0;
   border-radius: 8px;
+  box-shadow: none;
 }
 
 .add-card:hover {
@@ -200,7 +201,7 @@ button:focus {
 
 .note-create {
   position: relative;
-  background-color: #404040;
+  background-color: #252525;
   padding: 20px 40px;
   border-radius: 20px;
   width: 60%;
@@ -214,10 +215,13 @@ button:focus {
   right: 15px;
   font-size: 33px;
   transition: all 0.3s ease-in;
+  color: rgba(255,255,255,0.8);
 }
 
 .create-close:hover {
   cursor: pointer;
+  color: rgba(255,255,255,1);
+
 }
 
 .create-title {
@@ -228,7 +232,7 @@ button:focus {
 .create-desc {
   font-family: 'Poppins', sans-serif;
   font-size: 1.2em;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 .create-form {
@@ -264,7 +268,6 @@ button:focus {
   max-width: 400px;
   min-width: 300px;
   resize: both;
-  margin-bottom: 20px;
 }
 
 .create-date {
@@ -275,16 +278,21 @@ button:focus {
 }
 
 .create-button {
-  margin-top: 35px;
-  border: 0px solid rgba(0,0,0,0.2);
+  margin-top: 25px;
+  border: 1px solid rgba(0,0,0,0.2);
   outline: none;
+  transition: all 0.3s;
   background-color: #fffffa;
   color: black;
-  padding: 6px 16px;
+  padding: 8px 16px;
   width: 35%;
   font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+  box-shadow: 0px 1px 8px rgba(0,0,0,0.6);
 }
 
 .create-button:hover {
-  transform: scale(110%);
+  background-color: transparent;
+  color: white;
+  border: 1px solid rgba(255,255,255,0.6);
 }
