general commit (background size changed to background attachment)

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ button:focus {
 #main {
   position: relative;
   background: url(../img/projects-bg.jpg);
-  background-size: cover;
+  background-attachment: fixed;
   min-height: 100vh;
   width: 100%;
 }
