--- a/css/main.css
+++ b/css/main.css
@@ -296,3 +296,105 @@ button:focus {
   color: white;
   border: 1px solid rgba(255,255,255,0.6);
 }
+
+/*MEDIA QUERIES*/
+/*Extra small devices (portrait phones, less than 576px)*/
+@media (max-width: 575.98px) {
+
+  .note-create {
+    width: 100vw;
+    height: 100vh !important;
+    margin: 0;
+    border-radius: 0;
+  }
+
+  .create-form {
+    justify-content: flex-start;
+  }
+
+  .create-title {
+    text-align: center;
+    margin-top: 25px;
+    font-size: 1.3em;
+  }
+
+  .create-desc {
+    text-align: center;
+    font-size: 1em;
+  }
+
+  .create-input {
+    width: 100%;
+    height: 40px;
+    font-size: 1.3em;
+  }
+
+  .create-textarea {
+    width: 100%;
+    height: 30%;
+    max-width: 100%;
+  }
+
+  .create-button {
+    margin-top: 25%;
+    margin-left: auto;
+  }
+
+}
+
+/*Small devices (landscape phones, less than 768px)*/
+@media (max-width: 767.98px) {
+
+    .note-create {
+    width: 100vw;
+    height: 80vh;
+    margin: 0;
+    border-radius: 0;
+  }
+
+  .create-form {
+    justify-content: flex-start;
+  }
+
+  .create-title {
+    text-align: center;
+    margin-top: 25px;
+    font-size: 1.3em;
+  }
+
+  .create-desc {
+    text-align: center;
+    font-size: 1em;
+  }
+
+  .create-input {
+    width: 100%;
+    height: 40px;
+    font-size: 1.3em;
+  }
+
+  .create-textarea {
+    width: 100%;
+    height: 30%;
+    max-width: 100%;
+  }
+
+  .create-button {
+    margin-left: auto;
+  }
+
+}
+
+/*Medium devices (tablets, less than 992px)*/
+@media (max-width: 991.98px) {
+
+  .note-create {
+    width: 100%;
+  }
+
+}
+
+/*Large devices (desktops, less than 1200px)*/
+@media (max-width: 1199.98px) {
+
+}
